# lexc_parser

./: README.md  pyproject.toml  setup.py  tox.ini
example_scripts/: extract_infl_classes.py  extract_lemmas.py
lexc_parser/: __init__.py  entry.py  lexc.py  lexicon.py  misc.py  multichar.py
src/lexc_parser/: __init__.py  comment.py  entry.py  lexc.py  lexicon.py  multichar.py
test/: test_README.py  test_complete_file.py  test_entry.py  test_lexc.py  test_multichar.py
test/resources/: upper_expansion.lexc
